--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jie's Portfolio Website" />
+    <meta name="description" content="Jie Chen's Portfolio Website" />
     <title>Jie Chen</title>
   </head>
   <body>
