--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" type="image/png" href="/favicon.png" />
-    <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Jie Chen" />
     <meta name="description" content="Jie Chen's Portfolio Website" />
